fix game card title sizing and edit/delete icons alignment

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -88,7 +88,7 @@
   
     &__coverart {
       // margin: 20px;
-      width: 200px;
+      width: 250px;
       border-radius: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       flex-grow: 0;
@@ -103,16 +103,22 @@
       text-align: center;
       padding: 20px;
       border-radius: 12px;
-      transition: background-color 0.2s;
-      
-      &:hover {
-        background-color: $secondary-color;
+      width: 100%;
+
+      @include tablet {
+        transition: background-color 0.2s;
+
+        &:hover {
+          background-color: $secondary-color;
+        }
       }
+
     }
 
     &__button-container {
       display: flex;
       gap: 12px;
+      justify-content: center;
     }
   }
 
@@ -120,10 +126,8 @@
   display: flex;
   width: 26px;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 16px 0px;
-  justify-content: flex-end;
+  align-items: flex-end;
+  padding-bottom: 20px;
   flex-shrink: 0;
   flex-grow: 1;
 }
